--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "arch-v-server",
+  "version": "0.0.1",
+  "main": "lambda.js",
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0-0",
@@ -9,7 +12,13 @@
     "nodemon": "^1.18.4"
   },
   "scripts": {
-    "dev": "nodemon ./src/index.js --exec babel-node"
+    "dev": "nodemon ./src/index.js --exec babel-node",
+    "clean": "rm -rf build && mkdir build && rm lambda.js",
+    "build-server": "babel -d ./build ./src -s",
+    "build": "npm run clean && npm run build-server && claudia generate-serverless-express-proxy --express-module build/index",
+    "create": "claudia create --handler lambda.handler --deploy-proxy-api --region us-west-2",
+    "deploy": "rm -rf node_modules && npm run build && npm run create",
+    "start": "node ./build/index.js"
   },
   "dependencies": {
     "@tensorflow/tfjs": "^0.13.0",
@@ -20,6 +29,13 @@
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "image-size": "^0.6.3",
-    "multer": "^1.3.1"
-  }
+    "multer": "^1.3.1",
+    "node-fetch": "^2.2.0"
+  },
+  "engines": {
+    "yarn": "YARN NO LONGER USED - use npm instead."
+  },
+  "files": [
+    "build"
+  ]
 }
