Change upload handling

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ coverage
 # node-waf configuration
 .lock-wscript
 
+# Build
+build
+
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
