--- a/package.json
+++ b/package.json
@@ -16,20 +16,22 @@
     "clean": "rm -rf build && mkdir build && rm lambda.js",
     "build-server": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-server && claudia generate-serverless-express-proxy --express-module build/index",
-    "create": "claudia create --handler lambda.handler --deploy-proxy-api --region us-west-2",
-    "deploy": "rm -rf node_modules && npm run build && npm run create",
+    "create": "rm -rf node_modules && npm install && npm run-script build",
+    "deploy": "claudia create --handler lambda.handler --deploy-proxy-api --region us-west-2 --use-s3-bucket arch-v --keep",
     "start": "node ./build/index.js"
   },
   "dependencies": {
     "@tensorflow/tfjs": "^0.13.0",
     "@tensorflow/tfjs-converter": "^0.6.0",
     "@tensorflow/tfjs-node": "^0.1.17",
-    "canvas": "^1.6.12",
+    "aws-serverless-express": "^3.3.5",
+    "canvas-prebuilt": "^2.0.0-alpha.14",
     "dotenv-safe": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "image-size": "^0.6.3",
     "multer": "^1.3.1",
+    "multer-s3": "^2.7.0",
     "node-fetch": "^2.2.0"
   },
   "engines": {
