--- a/package.json
+++ b/package.json
@@ -14,18 +14,17 @@
   "scripts": {
     "dev": "nodemon ./src/index.js --exec babel-node",
     "clean": "rm -rf build && mkdir build && rm lambda.js",
-    "build-server": "babel -d ./build ./src -s",
-    "build": "npm run clean && npm run build-server && claudia generate-serverless-express-proxy --express-module build/index",
+    "transpile": "babel -d ./build ./src -s",
+    "build": "npm run clean && npm run transpile && claudia generate-serverless-express-proxy --express-module build/index",
     "create": "rm -rf node_modules && npm install && npm run-script build",
     "deploy": "claudia create --handler lambda.handler --deploy-proxy-api --region us-west-2 --use-s3-bucket arch-v --keep",
     "start": "node ./build/index.js"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^0.13.0",
-    "@tensorflow/tfjs-converter": "^0.6.0",
     "@tensorflow/tfjs-node": "^0.1.17",
+    "aws-sdk": "^2.325.0",
     "aws-serverless-express": "^3.3.5",
-    "canvas-prebuilt": "^2.0.0-alpha.14",
+    "canvas": "^2.0.0-alpha.13",
     "dotenv-safe": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
@@ -38,6 +37,9 @@
     "yarn": "YARN NO LONGER USED - use npm instead."
   },
   "files": [
-    "build"
+    "build",
+    "public",
+    ".env",
+    ".env.example"
   ]
 }
