--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "transpile": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run transpile && claudia generate-serverless-express-proxy --express-module build/index",
     "create": "rm -rf node_modules && npm install && npm run-script build",
-    "deploy": "claudia create --handler lambda.handler --deploy-proxy-api --region us-west-2 --use-s3-bucket arch-v --keep",
+    "deploy": "claudia create --handler lambda.handler --deploy-proxy-api --region us-west-2 --use-s3-bucket arch-v --memory 512 --timeout 10",
     "start": "node ./build/index.js"
   },
   "dependencies": {
     "@tensorflow/tfjs-node": "^0.1.17",
     "aws-sdk": "^2.325.0",
     "aws-serverless-express": "^3.3.5",
-    "canvas": "^2.0.0-alpha.13",
+    "canvas": "2.0.0-alpha.13",
     "dotenv-safe": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
